--- a/front_end/first file/clothesroom.html
+++ b/front_end/first file/clothesroom.html
@@ -50,6 +50,6 @@
     <div id='result'></div>
 
 
-    <Script src = "jihyukproject.js"> </Script>
+    <Script src = "clothesroom.js"> </Script>
 </body>
 </html>
