--- a/front_end/first file/clothesroom.html
+++ b/front_end/first file/clothesroom.html
@@ -46,10 +46,11 @@
     <i class="fa-solid fa-hat-cowboy-side"></i>
     <br>
 
-    <input type='button' name="submit" id="button" value = "다 입었어요!"> 
+    <input type='button' name="submit" id="submitbutton" value = "다 입었어요!"> 
     <div id='result'></div>
 
 
     <Script src = "clothesroom.js"> </Script>
+ 
 </body>
 </html>
