--- a/front_end/first file/mainpage.html
+++ b/front_end/first file/mainpage.html
@@ -143,7 +143,7 @@
   <div class ="weather-buttons">
 
     <button id="morning" class="weatherbutton"  > 오전이에요!</button>
-    <button id="afternnoon" class="weatherbutton"> 오후에요!  </button>
+    <button id="afternoon" class="weatherbutton"> 오후에요!  </button>
     <button id="night" class="weatherbutton"> 저녁이에요!  </button>
  <!-- 가운데 오전 오후 저녁 추가부  --> 
   </div>
@@ -163,7 +163,7 @@
 <div class = "clothesroompage" id="clothesroompage">
   
   <div class = "clothesroom-button">
-    <button id="iframebutton">HTML 파일 보기</button>
+    <img id="iframebutton" src="clothsbuttonimg.JPG" alt="HTML 파일 보기">
     <iframe id="myIframe" src=""></iframe>
   </div>
 
@@ -183,6 +183,8 @@
     
     
 <script src="mainpage.js"> </script>  
+
+
 
   </body>
 </html>
