--- a/front_end/html/clothesroom.html
+++ b/front_end/html/clothesroom.html
@@ -8,7 +8,7 @@
 
 	</style>
     <script src="https://kit.fontawesome.com/6d9e9a9e35.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href = "clothesroom.css">
+    <link rel="stylesheet" href = "front_end/css/clothesroom.css">
 </head>
 <body>
     아우터<br>
