--- a/front_end/html/clothing.html
+++ b/front_end/html/clothing.html
@@ -43,6 +43,6 @@
 		</thead>
 		<tbody id="calendar-body"></tbody>
 	</table> 
-  <script src="./index.js"></script>
+  <script src="./js/index.js"></script>
 <h1> 존나큰 사람</h1>
 </html>
