회원가입 수정

--- a/front_end/memberShip_page/memberShip_page.html
+++ b/front_end/memberShip_page/memberShip_page.html
@@ -9,7 +9,7 @@
     
     <body>
         <div id="header">
-            <a target="_blank" title="WeaTherla 회원 가입 페이지"><img src="..//memberShip_page/images/m_logo_image.png" id="logo" width="800" height="300></a>
+            <a target="_blank" title="WeaTherla 회원 가입 페이지"><img src="..//memberShip_page/images/m_logo_image.png"  width="800" height="300" id="logo"></a>
         </div>
 
         <div id= "wrapper">
