--- a/front_end/html/login/login.html
+++ b/front_end/html/login/login.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale-1.0">
     <title>WeaTherla</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <script src="script/script.js"></script>
+    <link rel="stylesheet" href="/first-project/front_end/css/login/reset.css">
+    <link rel="stylesheet" href="/first-project/front_end/css/login/style.css">
+    <script src="/first-project/front_end/js/login/script.js"></script>
 <head>
 <body>
-    <h1><a href="#"><img src="images/logo_images.png" alt="WeaTherla"></a></h1>
+    <h1><a href="#"><img src="/first-project/front_end/html/login/images/logo_images.png" alt="WeaTherla"></a></h1>
     <main>
         <form action="#" method="post" id="loginFrm">
             <fieldset>
