기본구조,연결완성본

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>연결성공 </title>
 </head>
 <body>
-
+    <h1>연결에 성공했습니다.</h1>
 </body>
 </html>
