--- a/front_end/html/main/mainpage.html
+++ b/front_end/html/main/mainpage.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!doctype html>
 <html lang="en" class="h-100">
   <head>
@@ -90,6 +89,7 @@
  <!-- 가운데 오전 오후 저녁 추가부  --> 
   </div>
 
+
   <div class="yourclothes">
     <input type="text" name="yourouter" id="yourouter" readonly>
     <input type="text" name="yourtop" id="yourtop" readonly>
@@ -168,6 +168,7 @@
     <span></span>
 </label>
 <div class="sidebar"> </div>
+<button class="join_link" id="log_btn" onclick="window.location.href='/front_end/html/login/login.html'">로그인</button>
 
     
     
