프론트전반적으로 개선했습니당

--- a/front_end/html/signup/memberShip_page.html
+++ b/front_end/html/signup/memberShip_page.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>WeaTherla : 회원가입</title>
-        <link rel="stylesheet" href="/front_end/css/signup/new_main.css">
+        <link rel="stylesheet" href="../../css/signup/new_main.css">
         
     </head>
     
     <body>
         <div id="header">
 
-            <a target="_blank" title="WeaTherla 회원 가입 페이지"><img src="images/m_logo_image.png"  width="800" height="300" id="logo"></a>
+            <a href="../main/mainpage.html"  target="_blank" title="WeaTherla 회원 가입 페이지"><img src="images/m_logo_image.png"  width="800" height="300" id="logo"></a>
 
         </div>
 
@@ -156,7 +156,7 @@
         </div> 
         <!-- wrapper -->
 
-    <script src="/front_end/js/signup/main.js"></script>
+    <script src="../../js/signup/main.js"></script>
 
     </body>
 
