경로 재 설정 + 이미지 수정

--- a/front_end/html/main/mainpage.html
+++ b/front_end/html/main/mainpage.html
@@ -170,7 +170,7 @@
     <span></span>
 </label>
 <div class="sidebar"> 
-<button class="join_link" id="log_btn" onclick="window.location.href='/front_end/html/login/login.html'">로그인</button>
+<button class="join_link" id="log_btn" onclick="window.location.href='../login/login.html'">로그인</button>
 
 </div>
     
