--- a/front_end/html/login/login.html
+++ b/front_end/html/login/login.html
@@ -10,7 +10,7 @@
     <script src="../../js/login/script.js"></script>
 <head>
 <body>
-    <h1><a href="../main/mainpage.html"><img src="../login/images/logo_images.png" alt="WeaTherla"></a></h1>
+    <h1><a href="../main/index.html"><img src="../login/images/logo_images.png" alt="WeaTherla"></a></h1>
     <main>
         <form action="#" method="post" id="loginFrm">
             <fieldset>
