--- a/front_end/html/signup/memberShip_page.html
+++ b/front_end/html/signup/memberShip_page.html
@@ -10,7 +10,7 @@
     <body>
         <div id="header">
 
-            <a href="../main/mainpage.html"  target="_blank" title="WeaTherla 회원 가입 페이지"><img src="images/m_logo_image.png"  width="800" height="300" id="logo"></a>
+            <a href="../main/index.html"  target="_blank" title="WeaTherla 회원 가입 페이지"><img src="images/m_logo_image.png"  width="800" height="300" id="logo"></a>
 
         </div>
 
