--- a/front_end/html/main/index.html
+++ b/front_end/html/main/index.html
@@ -150,7 +150,11 @@
       <i class="fa-solid fa-hat-cowboy-side"></i>
 
       <input type='radio' name='etc' value='etcnothing' label="etcnothing" id='etcnothing' /> 다른건 입지 않을래요!<br>
-      <br>
+      
+      개인차 <br>
+      <input type='radio' name='person' value='hotman' id='hotman' />  저는 더위를 많이 타요! <br>
+      <input type='radio' name='person' value='normalman' id='normalman' /> 저는 평범해요! <br>
+      <input type='radio' name='person' value='coldman' id='coldman' /> 저는 추위를 많이 타요! <br>
 
       <input type='button' name="submit" id="submitbutton" value="다 입었어요!">
       <div id='result'></div>
