--- a/src/main/resources/static/HTML/login/login.html
+++ b/src/main/resources/static/HTML/login/login.html
@@ -37,7 +37,7 @@
           </label>
         </p>
         <!--아이디(이메일)/비밀번호 찾기-->
-        <a href="#" class="idpw_search">아이디(이메일)/비밀번호 찾기</a>
+        <a href="#" class="idpw_search">아이디(이메일)/비밀번호 찾기</a> <!--페이지 없음-->
       </div>
       <!--로그인 버튼-->
       <button type="submit" id="login_btn">로그인</button>
