파일 다시정리했어요

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="../../css/main/mainpage.css" rel="stylesheet">
+  <link href="../templete/main/css/mainpage.css" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/6d9e9a9e35.js" crossorigin="anonymous"></script>
 
@@ -164,7 +164,7 @@
 </label>
 <div class="sidebar">
   <button class="join_link" id="log_btn"
-          onclick="window.location.href='../login/login.html'">로그인</button>
+          onclick="window.location.href='../templete/login/html/login.html'">로그인</button>
 
 </div>
 
@@ -182,7 +182,7 @@
   </div>
 </div>
 
-<script src="../../js/main/mainpage.js">
+<script src="../templete/main/js/mainpage.js">
 
 </script>
 
