--- a/src/main/resources/templete/login/html/login.html
+++ b/src/main/resources/templete/login/html/login.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale-1.0">
   <title>WeaTherla</title>
-  <link rel="stylesheet" href="../../css/login/reset.css">
-  <link rel="stylesheet" href="../../css/login/style.css">
-  <script src="../../js/login/script.js"></script>
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <script src="../js/script.js"></script>
   <head>
 <body>
-<h1><a href="../main/index.html"><img src="../login/images/logo_images.png" alt="WeaTherla"></a></h1>
+<h1><a href="../../../static/index.html"><img src="../login/images/logo_images.png" alt="WeaTherla"></a></h1>
 <main>
   <form action="#" method="post" id="loginFrm">
     <fieldset>
@@ -44,7 +44,7 @@
     </fieldset>
   </form>
   <!--회원가입은 input에 상관없이 다른 link로 이동함-->
-  <a href="../signup/memberShip_page.html" class="join_link">회원가입</a>
+  <a href="../../signup/html/memberShip_page.html" class="join_link">회원가입</a>
 </main>
 <footer>
   &copy; WeaTherla Corp. All rights reserved.
