--- a/src/main/resources/templete/signup/html/memberShip_page.html
+++ b/src/main/resources/templete/signup/html/memberShip_page.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>WeaTherla : 회원가입</title>
-    <link rel="stylesheet" href="../../css/signup/new_main.css">
+    <link rel="stylesheet" href="../css/new_main.css">
 
 </head>
 
 <body>
 <div id="header">
 
-    <a href="../main/index.html"  target="_blank" title="WeaTherla 회원 가입 페이지"><img src="images/m_logo_image.png"  width="800" height="300" id="logo"></a>
+    <a href="../../../static/index.html" target="_blank" title="WeaTherla 회원 가입 페이지"><img src="images/m_logo_image.png" width="800" height="300" id="logo"></a>
 
 </div>
 
@@ -161,7 +161,7 @@
         <!-- 최종 가입 하기 버튼-->
         <div class="btn_area">
 
-            <button class="join_link" id="btnJoin" onclick="window.location.href='/front_end/html/login/login.html'">최종가입완료</button>
+            <button class="join_link" id="btnJoin" onclick="window.location.href='../../login/html/login.html'">최종가입완료</button>
 
         </div>
 
@@ -173,7 +173,7 @@
 </div>
 <!-- wrapper -->
 
-<script src="../../js/signup/main.js"></script>
+<script src="../js/main.js"></script>
 
 </body>
 
