--- a/front_end/html/signup/memberShip_page.html
+++ b/front_end/html/signup/memberShip_page.html
@@ -134,7 +134,7 @@
 
                 <!-- 전화번호 입력 란 -->
                 <div>
-                    <h3 class="join_title"><label for="phoneNo">전화번호</label></h3>
+                    <h3 class="join_title"><label for="mobile">전화번호</label></h3>
                     <span class="box int_mobile">
                         <input type="tel" id="mobile" class="int" maxlength="16" placeholder="전화번호 입력">
                     </span>
@@ -144,15 +144,15 @@
                 <div class="personTemper1">
                     <h3 class="join_title"><label for="personTemper">개인차</label></h3>
                         <label>
-                          <input type="radio" name="cold" value="colder">
+                          <input type="radio" name="personTemper" value="colder">
                           추위를 많이 타요!
                         </label>
                         <label>
-                          <input type="radio" name="hot" value="hotter">
+                          <input type="radio" name="personTemper" value="hotter">
                           더위를 많이 타요!
                         </label>
                         <label>
-                          <input type="radio" name="good" value="goodd">
+                          <input type="radio" name="personTemper" value="goodd">
                           평범해요!
                         </label>
                       </div>
