--- a/src/main/resources/templete/index.html
+++ b/src/main/resources/templete/index.html
@@ -21,7 +21,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="../templete/main/css/mainpage.css" rel="stylesheet">
+  <link href="main/css/mainpage.css" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/6d9e9a9e35.js" crossorigin="anonymous"></script>
 
@@ -94,7 +94,7 @@
 
 <div class="clothesroompage" id="clothesroompage"> <!---이 부 부터는 기존 clothesroompage, 즉. 옷을 입히는 부 구현-->
 
-  <button type="button" class="clothesroompageopen" id="clothesroompageopen" onclick="showAlert()"><img src="clothsbuttonimg.png"></button>
+  <button type="button" class="clothesroompageopen" id="clothesroompageopen" onclick="showAlert()"><img src="../static/clothsbuttonimg.png"></button>
   <div class="clothesroom-button" , id="clothesroom-button">
 
     <!---실제 옷장 .-->
@@ -182,7 +182,7 @@
   </div>
 </div>
 
-<script src="../templete/main/js/mainpage.js">
+<script src="main/js/mainpage.js">
 
 </script>
 
