--- a/src/main/resources/templete/login/html/login.html
+++ b/src/main/resources/templete/login/html/login.html
@@ -10,7 +10,7 @@
   <script src="../js/script.js"></script>
   <head>
 <body>
-<h1><a href="../../../static/index.html"><img src="../login/images/logo_images.png" alt="WeaTherla"></a></h1>
+<h1><a href="../../index.html"><img src="../login/images/logo_images.png" alt="WeaTherla"></a></h1>
 <main>
   <form action="/login" method="post" id="loginFrm">
     <fieldset>
