--- a/src/main/resources/templete/signup/html/memberShip_page.html
+++ b/src/main/resources/templete/signup/html/memberShip_page.html
@@ -10,7 +10,7 @@
 <body>
 <div id="header">
 
-    <a href="../../../static/index.html" target="_blank" title="WeaTherla 회원 가입 페이지"><img src="images/m_logo_image.png" width="800" height="300" id="logo"></a>
+    <a href="../../index.html" target="_blank" title="WeaTherla 회원 가입 페이지"><img src="images/m_logo_image.png" width="800" height="300" id="logo"></a>
 
 </div>
 
