회원가입 dao dto entity

--- a/src/main/resources/templete/signup/html/memberShip_page.html
+++ b/src/main/resources/templete/signup/html/memberShip_page.html
@@ -66,44 +66,17 @@
 
         <!-- 생년월일 칸 -->
         <div>
-            <h3 class="join_title"><label for="yy">생년월일</label></h3>
+            <h3 class="join_title"><label for="yyyymmdd">생년월일</label></h3>
 
             <div id="bir_wrap">
                 <!-- 생년 -->
                 <div id="bir_yy">
                             <span class="box">
-                                <input type="text" id="yy" class="int" name= "birthYear" maxlength="4" placeholder="년(4자)">
+                                <input type="text" id="yyyymmdd" class="int" name= "birth" maxlength="4" placeholder="생년월일(18740321)">
                             </span>
                 </div>
 
-                <!-- 생년 월 -->
-                <div id="bir_mm">
-                            <span class="box">
-                                <select id="mm" class="sel" name= "birthMonth">
-                                    <option>월</option>
-                                    <option value="01">1</option>
-                                    <option value="02">2</option>
-                                    <option value="03">3</option>
-                                    <option value="04">4</option>
-                                    <option value="05">5</option>
-                                    <option value="06">6</option>
-                                    <option value="07">7</option>
-                                    <option value="08">8</option>
-                                    <option value="09">9</option>
-                                    <option value="10">10</option>
-                                    <option value="11">11</option>
-                                    <option value="12">12</option>
-                                </select>
 
-                            </span>
-                </div>
-
-                <!-- 생년월일 -->
-                <div id="bir_dd">
-                            <span class="box">
-                                <input type="text" id="dd" class="int" name="birthDay"  maxlength="2" placeholder="일">
-                            </span>
-                </div>
 
             </div>
             <span class="error_next_box"></span>
