마지막 push 기원

--- a/front_end/html/login/login.html
+++ b/front_end/html/login/login.html
@@ -40,7 +40,8 @@
                     <a href="#" class="idpw_search">아이디(이메일)/비밀번호 찾기</a>
                 </div>
                 <!--로그인 버튼-->
-                <button type="submit" id="login_btn">로그인</button>
+                <button class="submit" id="login_btn" onclick="window.location.href='../main/mypage.html'">로그인</button>
+
             </fieldset>
         </form>
         <!--회원가입은 input에 상관없이 다른 link로 이동함-->
