--- a/front_end/html/signup/memberShip_page.html
+++ b/front_end/html/signup/memberShip_page.html
@@ -162,7 +162,7 @@
                 <!-- 최종 가입 하기 버튼-->
                 <div class="btn_area">
 
-                    <button class="join_link" id="btnJoin" onclick="window.location.href='/front_end/html/login/login.html'">최종가입완료</button>
+                    <button class="join_link" id="btnJoin" onclick="window.location.href='../login/login.html'">최종가입완료</button>
 
                 </div>
                 
