--- a/front_end/html/main/mypage.html
+++ b/front_end/html/main/mypage.html
@@ -170,19 +170,16 @@
   </div>
 
   <input type="checkbox" id="menuicon">
-<label for="menuicon">
-  <span></span>
-  <span></span>
-  <span></span>
-</label>
-<div class="sidebar">
-  <form action="../login/login.html" method="get">
-    <button class="join_link" id="log_btn" type="submit">로그인</button>
-  </form>
-</div>
-
-  
-
+  <label for="menuicon">
+    <span></span>
+    <span></span>
+    <span></span>
+  </label>
+  <div class="sidebar">
+    <form action="../main/index.html" method="get">
+      <button class="join_link" id="logout_btn" type="submit">로그아웃</button>
+    </form>
+  </div>
 
   
 <!--토글 메뉴 css및 JS정리-->
